--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>Scotomalab</title>
         <meta name="Scotomalab" content="Scotomalab, coming soon...">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./style.css">
@@ -12,7 +12,7 @@
 
 
     <div class="container">
-            <div class="marquee3k" 
+            <div id="marquee-one" class="marquee3k" 
             data-speed="2" → play around here
             data-reverse="bool" → default: R to L / T to B
             >
@@ -21,6 +21,24 @@
             or any kind of html -->
             <h1>coming soon&#160</h2>
         </div>
+        <div id="marquee-two" class="marquee3k" 
+        data-speed="2.5" → play around here
+        data-reverse="bool" → default: R to L / T to B
+        >
+        <!-- data-pausable=false → Pause marquee on hover -->
+        <!--you can even have inline images,
+        or any kind of html -->
+        <h1>coming soon&#160</h2>
+    </div>
+    <div id="marquee-three" class="marquee3k" 
+    data-speed="0.5" → play around here
+    data-reverse="bool" → default: R to L / T to B
+    >
+    <!-- data-pausable=false → Pause marquee on hover -->
+    <!--you can even have inline images,
+    or any kind of html -->
+    <h1>coming soon&#160</h2>
+</div>
         <div class="header-title">
             <img src="./assets/SCOTOMALAB LOGO 10X10 2019.svg">
         </div>
